Revert Tags criteria change as it is backward incompatible due to UI changes not integrated yet (#51508)
* Revert Tags criteria change as it is backward incompatible due to UI changes not integrated yet

* increase patch version